<resources>
    <string name="app_name">Narrowboat Navigator</string>
    <string name="title_journey">Journeys</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_voyage">Voyage</string>
    <string name="homefragment">Home Fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletejourney">Are you sure you want to delete this journey?</string>
    <string name="title_activity_journey">JourneyActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
</resources>